[project] try correct popup on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,9 @@ ul {
   
 /* The menu */
 #menu {
+    position: fixed;
     font-size:16pt;
-    z-index: 1; 
+    z-index: 1000; 
     background-color: rgba(0, 180, 0, 255);
 }
   
